fix(hamburger-menu): import library and now menu is collapsing after click

--- a/src/ExclusiveCarsWAndW.Web/ClientApp/src/assets/scss/custom.scss
+++ b/src/ExclusiveCarsWAndW.Web/ClientApp/src/assets/scss/custom.scss
@@ -15,7 +15,6 @@ $font-sizes: (
   background: url("/banner.jpg") no-repeat center center;
   background-size: cover;
   height: 800px;
-  font-family: "Bebas Neue", sans-serif;
 
   h1 {
     font-size: 3.5rem;
@@ -24,6 +23,15 @@ $font-sizes: (
   h2 {
     font-size: 2.5rem;
   }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Bebas Neue", sans-serif;
 }
 
 .card-img-top {
