--- a/src/ExclusiveCarsWAndW.Web/ClientApp/src/index.css
+++ b/src/ExclusiveCarsWAndW.Web/ClientApp/src/index.css
@@ -28,11 +28,15 @@
 
 .navbar {
   --bs-navbar-active-color: #000000;
+  --bs-navbar-toggler-padding-x: 0.5rem;
+  --bs-navbar-toggler-padding-y: 0.5rem;
   --bs-navbar-nav-link-padding-x: 1rem;
+  --bs-navbar-toggler-font-size: 0.875rem;
 }
 
 .navbar-nav {
   --bs-nav-link-padding-y: 0.375rem;
+  --bs-nav-link-padding-x: 0.75rem;
   --bs-nav-link-font-weight: 500;
 }
 
